--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
 
   <link rel="icon" href="//www.ibm.com/favicon.ico" />
 
-  <meta name="dcterms.date" content="2022-04-07" /> // replace with today's date
+  <meta name="dcterms.date" content="2022-04-07" />
   <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
   <meta name="geo.country" content="US" />
   <meta name="robots" content="index,follow" />
