--- a/src/index.html
+++ b/src/index.html
@@ -68,18 +68,18 @@
         <div class="bx--row">
           <div class="bx--col-lg-8 bx--offset-lg-4 bx--no-gutter">
             <dds-leadspace-with-search adjacent-theme="g90-and-g100">
-              <dds-leadspace-with-search-heading>Find analytics services</dds-leadspace-with-search-heading>
-              <dds-leadspace-with-search-content>
-                <dds-leadspace-with-search-content-heading
-                >Make fast and accurate data-based
-                  decisions
-                </dds-leadspace-with-search-content-heading
+              <dds-leadspace-block-heading slot="heading"
+                >Find analytics services</dds-leadspace-block-heading
+              >
+              <dds-leadspace-block-content slot="content">
+                <dds-leadspace-search-block-heading
+                  >Make fast and accurate data-based
+                  decisions</dds-leadspace-search-block-heading
                 >
-              </dds-leadspace-with-search-content>
+              </dds-leadspace-block-content>
               <dds-search-with-typeahead
-                      slot="search"
-                      searchPlaceholder="Search for an IBM analytics service..."
-                      leadspace-search></dds-search-with-typeahead>
+                slot="search"
+                leadspace-search></dds-search-with-typeahead>
             </dds-leadspace-with-search>
           </div>
         </div>
@@ -88,12 +88,14 @@
         <a name="1" data-title="Smarter decisions"></a>
         <dds-content-section>
           <dds-content-section-heading>Smarter decisions</dds-content-section-heading>
-          <dds-content-block>
+          <dds-content-block complementary-style-scheme="with-border">
             <dds-content-block-heading>Always make smarter decisions with Analytics</dds-content-block-heading>
             <dds-content-block-copy>Analytics services on the IBM Cloud can be deployed in the cloud, on premises or in a hybrid environment. IBM Cloud solutions, featuring embedded intelligence capabilities through machine learning (ML), enable you to easily analyze the data and build ML models that can be deployed in cognitive applications. Combine these services to reveal insights.</dds-content-block-copy>
+
             <dds-content-group>
               <dds-content-group-heading>Analytics services</dds-content-group-heading>
               <dds-content-group-copy>Work together in a simpler way to find new and unexpected insights quickly and deliver business-changing results with state-of-the-art services.</dds-content-group-copy>
+
               <dds-card-group>
                 <dds-card-group-item cta-type='local' href='https://example.com'>
                   <dds-image slot="image" alt="Image alt text" default-src="./assets/images/analytics-services-card1.png"></dds-image>
@@ -189,7 +191,7 @@
               srcset="./assets/images/card-section-offset.jpg">
             </dds-image-item>
             <dds-image-item
-              media="(max-width: 619px)"
+              media="(min-width: 619px)"
               srcset="./assets/images/card-section-offset--sm.jpg">
             </dds-image-item>
           </dds-background-media>
@@ -197,7 +199,7 @@
             >A quick look at the main benefits of
             analytics
           </dds-content-block-heading
-            >
+          >
           <dds-text-cta
             slot="action"
             cta-type="local"
@@ -211,7 +213,7 @@
               <dds-card-eyebrow>Collaboration</dds-card-eyebrow>
               <dds-card-heading
                 >Connect teams across functions</dds-card-heading
-                >
+               >
               <p>
                 Collaborate in teams across functions to access all trusted data
                 and best-in- class technologies.
@@ -222,7 +224,7 @@
               <dds-card-eyebrow>Innovation</dds-card-eyebrow>
               <dds-card-heading
                 >Discover new insights from data</dds-card-heading
-                >
+              >
               <p>
                 Use multiple analytics technologies to learn from data and
                 quickly get new answers for your business.
@@ -233,10 +235,10 @@
               <dds-card-eyebrow>Fast delivery</dds-card-eyebrow>
               <dds-card-heading
                 >Accelerate delivery of insights</dds-card-heading
-                >
+              >
               <p>
-                Deliver new insights to your business quickly, and continuously
-                improve them through rapid iteration.
+                Deliver new insights to your business quickly, and
+                continuously improve them through rapid iteration.
               </p>
               <dds-card-cta-footer slot="footer"> </dds-card-cta-footer>
             </dds-card-group-item>
@@ -248,74 +250,58 @@
           <dds-content-block>
             <dds-content-block-heading>IBM Analytics Engine</dds-content-block-heading>
             <dds-content-block-copy>IBM Analytics Engine provides an architecture for Hadoop clusters that decouples the compute and storage tiers. Instead of a permanent cluster formed of dual-purpose nodes, the Analytics Engine allows users to store data in an object storage layer such as IBM Cloud Object Storage and spins up clusters of compute notes when needed. Separating compute from storage helps to transform the flexibility, scalability and maintainability of big data analytics platforms.  </dds-content-block-copy>
+
             <dds-content-group>
               <dds-content-group-heading>IBM Analytics Engine features</dds-content-group-heading>
               <dds-content-group-copy>A single Hadoop and Spark service providing an environment to develop and deploy advanced analytics applications in minutes.</dds-content-group-copy>
               <dds-content-item>
-                <dds-content-item-heading
-                  >Leverage open source power</dds-content-item-heading
-                >
-                <dds-content-item-copy
-                  >Build on an ODPi compliant stack with pioneering data science tools with
-                  the broader Apache Hadoop and Apache Spark ecosystem.</dds-content-item-copy
-                >
+                <dds-content-item-heading>Leverage open source power</dds-content-item-heading>
+                <dds-content-item-copy>Build on an ODPi compliant stack with pioneering data science tools with the broader Apache Hadoop and Apache Spark ecosystem.</dds-content-item-copy>
               </dds-content-item>
               <dds-content-item>
-                <dds-content-item-heading
-                  >Spin up and scale on demand</dds-content-item-heading
-                >
+                <dds-content-item-heading>Spin up and scale on demand</dds-content-item-heading>
                 <dds-image-with-caption
-                  default-src="./assets/images/ibm-analytics-engine-img.png"
-                  heading="Graphical depiction of analytics clusters"
-                  copy="lorum ipsum"
-                  lightbox
+                        default-src="./assets/images/ibm-analytics-engine-img.png"
+                        heading="Graphical depiction of analytics clusters"
+                        copy="lorum ipsum"
+                        lightbox
                 ></dds-image-with-caption>
-                <dds-content-item-copy
-                  >Define clusters based on your application's requirement. Choose the
-                  appropriate software pack, version, and size of the cluster. Use as long as
-                  required and delete as soon as application finishes
-                  jobs.</dds-content-item-copy
-                >
-                <dds-text-cta slot="footer" cta-type="local" href="https://www.example.com"
-                  >Learn more about NLP</dds-text-cta
-                >
+                <dds-content-item-copy>Define clusters based on your application's requirement. Choose the appropriate software pack, version, and size of the cluster. Use as long as required and delete as soon as application finishes jobs.</dds-content-item-copy>
+                <dds-text-cta slot="footer" cta-type="local" href="https://www.example.com">Learn more about NLP</dds-text-cta>
               </dds-content-item>
               <dds-content-item>
                 <dds-content-item-heading>Configure the environment</dds-content-item-heading>
-                <dds-content-item-copy
-                  >Configure clusters with third-party analytics libraries and packages.
-                  Deploy workloads from IBM Cloud services like machine
-                  learning.</dds-content-item-copy
-                >
-                <dds-text-cta slot="footer" cta-type="local" href="https://www.example.com"
-                  >Read more about Engine configuration</dds-text-cta
-                >
+                <dds-content-item-copy>Configure clusters with third-party analytics libraries and packages. Deploy workloads from IBM Cloud services like machine learning.</dds-content-item-copy>
+                <dds-text-cta slot="footer" cta-type="local" href="https://www.example.com">Read more about Engine configuration</dds-text-cta>
               </dds-content-item>
+              <dds-card-link-cta slot="footer" cta-type="local" href="https://www.example.com">
+                <dds-card-link-heading>Register for a free trial of IBM Analytics Engine</dds-card-link-heading>
+                <dds-card-cta-footer></dds-card-cta-footer>
+              </dds-card-link-cta>
             </dds-content-group>
-            <dds-link-list type="default" slot="complementary">
+
+            <dds-link-list type="default" slot='complementary'>
               <dds-link-list-heading>Related products</dds-link-list-heading>
-              <dds-link-list-item-card-cta href="https://www.exmaple.com" cta-type="local">
+              <dds-link-list-item-card-cta
+                      href="https://www.exmaple.com"
+                      cta-type="local"
+              >
                 <p>IBM Watson</p>
                 <dds-card-cta-footer></dds-card-cta-footer>
               </dds-link-list-item-card-cta>
-              <dds-link-list-item-card-cta href="https://www.exmaple.com" cta-type="local">
+              <dds-link-list-item-card-cta
+                      href="https://www.exmaple.com"
+                      cta-type="local"
+              >
                 <p>Take a drive with IBM Watson Studio</p>
                 <dds-card-cta-footer></dds-card-cta-footer>
               </dds-link-list-item-card-cta>
-              <dds-link-list-item-card-cta href="https://www.exmaple.com" cta-type="local">
+              <dds-link-list-item-card-cta
+                      href="https://www.exmaple.com"
+                      cta-type="local"
+              >
                 <p>IBM Watson Knowledge Catalog</p>
-                <dds-card-cta-footer>
-                  <dds-card-link-cta
-                    slot="footer"
-                    cta-type="local"
-                    href="https://www.example.com"
-                  >
-                    <dds-card-link-heading
-                      >Register for a free trial of IBM Analytics Engine</dds-card-link-heading
-                    >
-                    <dds-card-cta-footer></dds-card-cta-footer>
-                  </dds-card-link-cta>
-                </dds-card-cta-footer>
+                <dds-card-cta-footer></dds-card-cta-footer>
               </dds-link-list-item-card-cta>
             </dds-link-list>
           </dds-content-block>
@@ -323,7 +309,9 @@
         <a name="5" data-title="Engage an expert"></a>
         <div class="dark-theme">
           <dds-cta-section>
-            <dds-content-section-heading>Take the next step</dds-content-section-heading>
+            <dds-content-section-heading slot="heading"
+              >Take the next step</dds-content-section-heading
+            >
             <dds-cta-block no-border>
               <dds-content-block-heading
                 >Engage an expert</dds-content-block-heading
