--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" href="//www.ibm.com/favicon.ico" />
 
-  <meta name="dcterms.date" content="2022-05-12" /> // replace with today's date
+  <meta name="dcterms.date" content="2022-05-12" />
   <meta name="dcterms.rights" content="© Copyright IBM Corp. 2022" />
   <meta name="geo.country" content="US" />
   <meta name="robots" content="index,follow" />
