--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,6 @@
     <meta
       name="description"
       content="This is an example page for the Carbon for IBM.com Tutorial" />
-    <meta charset="UTF-8" />
-
-    <link rel="icon" href="//www.ibm.com/favicon.ico" />
-
-    <meta name="dcterms.date" content="1955-11-05" />
-    <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
-    <meta name="geo.country" content="US" />
-    <meta name="robots" content="index,follow" />
-
-    <link rel="alternate" hreflang="en-us" href="./index.html?cc=us&lc=en" />
-    <link rel="alternate" hreflang="fr-ca" href="./index.html?cc=ca&lc=fr" />
-    <link rel="alternate" hreflang="ko-kr" href="./index.html?cc=kr&lc=ko" />
-    <link rel="alternate" hreflang="ja-jp" href="./index.html?cc=jp&lc=ja" />
-
     <script>
       window.digitalData = {
         page: {
@@ -31,14 +17,14 @@
           pageInfo: {
             effectiveDate: '', // e.g. 2014-11-19
             expiryDate: '', // e.g. 2017-11-19
-            language: 'en-US', // e.g. en-US
+            language: '', // e.g. en-US
             publishDate: '', // e.g. 2014-11-19
             publisher: '', // e.g. IBM Corporation
             version: 'Carbon for IBM.com',
             ibm: {
               contentDelivery: '', // e.g. ECM/Filegen
               contentProducer: '', // e.g. ECM/IConS Adopter 34 - GS83J2343G3H3ERG - 11/19/2014 05:14:02 PM
-              country: 'US', // e.g. US
+              country: '', // e.g. US
               industry: '', // e.g. B,U
               owner: '', // e.g. Some Person/City/IBM
               siteID: '', // e.g. MySiteID
@@ -48,7 +34,16 @@
           },
         },
       };
-
+    </script>
+    <link rel="alternate" hreflang="en-us" href="./index.html?cc=us&lc=en" />
+    <link rel="alternate" hreflang="fr-ca" href="./index.html?cc=ca&lc=fr" />
+    <link rel="alternate" hreflang="ko-kr" href="./index.html?cc=kr&lc=ko" />
+    <link rel="alternate" hreflang="ja-jp" href="./index.html?cc=jp&lc=ja" />
+    <script
+      src="//1.www.s81c.com/common/stats/ibm-common.js"
+      type="text/javascript"
+      async="async"></script>
+    <script>
       var params = new URLSearchParams(window.location.search);
 
       if (params.has('lc') && params.has('cc')) {
@@ -61,18 +56,35 @@
         digitalData.page.pageInfo.ibm.country = params.get('cc').toUpperCase();
       }
     </script>
+    <meta charset="UTF-8" />
 
-    <script
-      src="//1.www.s81c.com/common/stats/ibm-common.js"
-      type="text/javascript"
-      async="async"></script>
+    <link rel="icon" href="//www.ibm.com/favicon.ico" />
+
+    <meta name="dcterms.date" content="YYYY-MM-DD" />
+    <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
+    <meta name="geo.country" content="US" />
+    <meta name="robots" content="index,follow" />
   </head>
 
   <body>
-    <div class="bx--grid">
-      <div class="bx--row">
-        <div class="bx--col-lg-8 bx--offset-lg-4 bx--no-gutter">
-          <dds-leadspace-with-search adjacent-theme="g90-and-g100">
+    <dds-dotcom-shell-container>
+      <div class="bx--grid">
+        <div class="bx--row">
+          <div class="bx--col-lg-8 bx--offset-lg-4 bx--no-gutter">
+            <dds-leadspace-with-search adjacent-theme="g90-and-g100">
+              <dds-leadspace-with-search-heading
+                >Find analytics services</dds-leadspace-with-search-heading
+              >
+              <dds-leadspace-with-search-content>
+                <dds-leadspace-with-search-content-heading
+                  >Make fast and accurate data-based decisions
+                </dds-leadspace-with-search-content-heading>
+              </dds-leadspace-with-search-content>
+              <dds-search-with-typeahead
+                slot="search"
+                searchPlaceholder="Search for an IBM analytics service..."
+                leadspace-search></dds-search-with-typeahead>
+            </dds-leadspace-with-search>
             <dds-table-of-contents toc-layout="horizontal" stickyOffset="48">
               <a name="3" data-title="Main benefits of analytics"></a>
               <dds-card-section-offset>
@@ -266,21 +278,9 @@
                 </div>
               </div>
             </dds-table-of-contents>
-            <dds-leadspace-with-search-heading
-              >Find analytics services</dds-leadspace-with-search-heading
-            >
-            <dds-leadspace-with-search-content>
-              <dds-leadspace-with-search-content-heading
-                >Make fast and accurate data-based decisions
-              </dds-leadspace-with-search-content-heading>
-            </dds-leadspace-with-search-content>
-            <dds-search-with-typeahead
-              slot="search"
-              searchPlaceholder="Search for an IBM analytics service..."
-              leadspace-search></dds-search-with-typeahead>
-          </dds-leadspace-with-search>
+          </div>
         </div>
       </div>
-    </div>
+    </dds-dotcom-shell-container>
   </body>
 </html>
